fix: add CSP frame ancestor header to mostly all responses (#13164) (#13857)