@@ -27,14 +27,14 @@
  */
 package org.hisp.dhis.security.action;
 
-import static org.hisp.dhis.webapi.filter.CspFilter.CSP_REQUEST_NONCE_ATTR_NAME;
-
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Set;
+
+import javax.servlet.http.HttpSession;
 
 import org.apache.struts2.ServletActionContext;
 import org.hisp.dhis.i18n.ui.resourcebundle.ResourceBundleManager;
@@ -44,7 +44,6 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.mobile.device.Device;
 import org.springframework.mobile.device.DeviceResolver;
 
-import com.google.common.collect.ImmutableMap;
 import com.opensymphony.xwork2.Action;
 
 /**
@@ -74,6 +73,11 @@ public class LoginAction
     // Input & Output
     // -------------------------------------------------------------------------
     private String cspNonce = "";
+
+    public void setCspNonce( String cspNonce )
+    {
+        this.cspNonce = cspNonce;
+    }
 
     public String getCspNonce()
     {
@@ -128,9 +132,10 @@ public class LoginAction
     {
         addRegisteredProviders();
 
-        cspNonce = (String) ServletActionContext.getRequest().getSession().getAttribute( CSP_REQUEST_NONCE_ATTR_NAME );
-
         Device device = deviceResolver.resolveDevice( ServletActionContext.getRequest() );
+        HttpSession session = ServletActionContext.getRequest().getSession();
+        String nonce = (String) session.getAttribute( "nonce" );
+        setCspNonce( nonce );
 
         ServletActionContext.getResponse().addHeader( "Login-Page", "true" );
 
@@ -154,7 +159,7 @@ public class LoginAction
         {
             DhisOidcClientRegistration clientRegistration = repository.getDhisOidcClientRegistration( registrationId );
 
-            providers.add( ImmutableMap.of(
+            providers.add( Map.of(
                 "id", registrationId,
                 "icon", clientRegistration.getLoginIcon(),
                 "iconPadding", clientRegistration.getLoginIconPadding(),
